# vx6

./: NOTICE  go.mod  go.sum
.github/workflows/: stable-gate.yml
VX6_Proof_of_Ownership/: PROOF_PACKAGE_README.md  VX6_OWNERSHIP_DECLARATION.md  VX6_contributors.txt  VX6_first_commit.txt  VX6_git_history.txt  VX6_source_snapshot_2026-06-04.sha256  repo_backup.bundle.sha256
VX6_Proof_of_Ownership/screenshots/: README.md
apps/vx6comms/: main.go
apps/vx6comms-android/: ANDROID_APP_PLAN.md  KOTLIN_QUICKSTART.md
apps/vx6comms-tauri/src/: App.tsx  styles.css
apps/vx6comms-tauri/src-tauri/: Cargo.toml
apps/vx6comms-tauri/src-tauri/src/: main.rs
browser/qt/: PLAN.md
browser/qt/src/: browserwindow.cpp  vx6backend.cpp  vx6backend.h  vx6schemehandler.cpp
cmd/vx6/: main.go
cmd/vx6-gui/: main.go
cmd/vx6-proxy/: main.go
internal/config/: config.go
internal/dht/: dht.go
internal/discovery/: discovery.go
internal/hidden/: hidden.go
internal/identity/: store.go
internal/node/: accept_hardening_test.go  node.go
internal/onion/: onion.go
internal/proto/: proto.go
internal/record/: endpoint.go  service.go
internal/runtimectl/: runtimectl.go
internal/secure/: session.go  session_test.go
internal/serviceproxy/: proxy.go
internal/transfer/: transfer.go
internal/transport/: quic.go  transport.go  transport_test.go
mobile/: README.md  engine.go
scripts/: build_android_mobile.sh  build_ios_mobile.sh
sdk/: profile.go  sdk.go
sdk/chat/: chat_test.go  client.go  crypto.go  types.go
